--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .App {
-  text-align: center;
+  text-align: center;    
+  margin: 1rem;
 }
 
 .App-logo {
@@ -46,12 +47,12 @@
 }
 
 .container {
-     width: 50%;
+     width: 50% !important;
     /* border: 1px solid #ccc; */
     border-radius: 0.5rem;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
     padding: 10px;
-    margin: 2rem;
+    margin: 1rem !important;
     background-color: rgb(251 251 251 / 90%);
   }
 
@@ -68,6 +69,7 @@ input[type='file'] {
 
 .submit-btn {
   margin-top: 20px;
+  margin-bottom: 20px;
   padding: 10px 20px;
   font-size: 16px;
   background-color: #1E90FF;
