--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,5 @@
 .App {
-  text-align: center;    
-  margin: 1rem;
+  text-align: center;  
 }
 
 .App-logo {
@@ -15,8 +14,8 @@
 }
 
 .App-header {
-  min-height: 25vh;
-  padding: 10px 20px;
+  min-height: 18vh;
+  padding: 0px 20px;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -39,6 +38,25 @@
 
 .App-header-menu-item:hov{
   color: #61dafb;
+}
+
+.App-header-menu-item{
+  display: block;
+}
+
+.app-desc{
+  display: flex;
+  justify-content: center;
+}
+
+.app-desc p{
+  width: 60%;
+  font-weight: 600;
+}
+
+.menu-link a{
+  color: #007bff; 
+  font-weight: bold;
 }
 
 .form-actions {
@@ -99,6 +117,35 @@ input[type='file'] {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+
+.disabled{
+  opacity: 0.5; 
+  cursor: not-allowed;
+}
+.progress{
+  width: 50%;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 1rem;
+}
+
+.Footer {
+  background-color: #f0f0f0; /* Background color for the footer */
+  padding: 20px;
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 1rem;
+}
+
+.Footer p {
+  margin: 0; /* Remove default margin for <p> */
+}
+
+.FooterHighlight {
+  color: #007bff; /* Highlight color */
+  font-weight: bold; /* Make the text bold */
 }
 
 @keyframes App-logo-spin {
